Changed library and project names to mpnn to match source code in CMakeLists files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ if(NOT CMAKE_BUILD_TYPE)
 		FORCE)
 endif(NOT CMAKE_BUILD_TYPE)
 
-add_library(DNN src/ANN.cpp src/kd_tree.cpp src/kd_util.cpp src/kd_split.cpp src/kd_search.cpp src/nn.cpp src/multiann.cpp)
+add_library(mpnn SHARED src/ANN.cpp src/kd_tree.cpp src/kd_util.cpp src/kd_split.cpp src/kd_search.cpp src/nn.cpp src/multiann.cpp)
 
 add_subdirectory(test)
